--- a/project/lesson_4.html
+++ b/project/lesson_4.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <title>Lesson_4</title>
     <style>
+        .container {
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         .img-wrap {
-            position: absolute;
+            position: relative;
+            width: 250px;
+            height: 350px;
         }
         .img-wrap .img {
             position: absolute;
@@ -27,9 +36,11 @@
     </style>
 </head>
 <body>
-    <div class="img-wrap">
-        <img class="img font" src="../asset/正面.jpg" alt="正面">
-        <img class="img back" src="../asset/反面.jpg" alt="反面">
+    <div class="container">
+        <div class="img-wrap">
+            <img class="img font" src="../asset/正面.jpg" alt="正面">
+            <img class="img back" src="../asset/反面.jpg" alt="反面">
+        </div>
     </div>
 </body>
 </html>
